// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiple expenses summary 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totaling 
    $1,141.95
  </p>
</div>
`;

exports[`should render single expense summary 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $1.95
  </p>
</div>
`;
